2014-02-19      Gaius Mulley <gaius@gnu.org>

	* gm2/Make-lang.in:  include the search path  -I$(srcdir)/gm2/gm2-gcc
	  when building stage2 from the compiler sources.
	* gm2/bnf/gm2l.bnf:  import Dup from DynamicStrings.
	* gm2/gm2-compiler/M2ALU.mod:  fixed many imports so that
	  the module can be built during stage2, via xgm2.
	* gm2/gm2-compiler/M2Base.mod:  fixed many imports so that
	  the module can be built during stage2, via xgm2.
	* gm2/gm2-compiler/M2Preprocess.mod:  corrected import of
	  CppCommandLine from M2Options rather than M2DriverOptions.
	* gm2/gm2-compiler/M2Range.mod:  fixed many imports so that
	  the module can be built during stage2, via xgm2.
	* gm2/gm2-compiler/M2System.mod:  fixed many imports so that
	  the module can be built during stage2, via xgm2.
	* gm2/gm2-compiler/SymbolConversion.mod:  fixed many imports so that
	  the module can be built during stage2, via xgm2.
	* gm2/gm2-compiler/m2flex.def:  fixed many imports so that
	  the module can be built during stage2, via xgm2.
	* gm2/Make-lang.in:  added attribs.o to link stage2/gm2/cc1gm2.
	  Removed $(BACKENDLIBS) $(LIBSTDCXX) from the dependancies of
	  stage2/gm2/cc1gm2.  Added -I$(srcdir)/gm2/gm2-gcc to
	  all gm2/gm2-compiler-paranoid rules.
	* gm2/gm2-compiler/M2Options.def:  added many procedures to the
	  list of export qualified identifiers.
	* gm2/gm2-compiler/SymbolTable.mod:  changed needsUnsigned
	  and needsLong to BOOLEAN.

2014-02-18      Gaius Mulley <gaius@gnu.org>

	* gm2/gm2-compiler/M2GenGCC.mod:  fixed many imports so that
	  the module can be built during stage2, via xgm2.
	* gm2/gm2-compiler/M2GCCDeclare.mod:  fixed many imports so that
	  the module can be built during stage2, via xgm2.
	* gm2/gm2-gcc/m2decl.def:  use BOOLEAN parameters rather than
	  INTEGERs.
	* gm2/p2c/p2c-src/src/decl.c:  tidied up formatting.

2014-02-17      Gaius Mulley <gaius@gnu.org>

	* gm2/config-lang.in:  added m2block.c, m2builtins.c and m2decl.c
	  to the list of gtfiles.