@@ -18,7 +18,7 @@ Foundation, 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA. *)
 
 IMPLEMENTATION MODULE Indexing ;
 
-FROM libc IMPORT memset, memcpy ;
+FROM libc IMPORT memset, memmove ;
 FROM Storage IMPORT ALLOCATE, REALLOCATE, DEALLOCATE ;
 FROM SYSTEM IMPORT TSIZE, ADDRESS, WORD, BYTE ;
 
@@ -257,7 +257,7 @@ BEGIN
          INC(b, TSIZE(ADDRESS)) ;
          IF p^=a
          THEN
-            p := memcpy(p, b, (High-j)*TSIZE(ADDRESS)) ;
+            p := memmove(p, b, (High-j)*TSIZE(ADDRESS)) ;
             DEC(High)
          END ;
          INC(j)
